--- a/pom.xml
+++ b/pom.xml
@@ -2,20 +2,37 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId> <!-- Замените на ваш Group ID -->
-    <artifactId>ecosystem-simulator</artifactId> <!-- Название проекта -->
+    <groupId>com.example</groupId>
+    <artifactId>ecosystem-simulator</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Ecosystem Simulator</name>
     <description>Simulation of a virtual ecosystem with animals and plants.</description>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source> <!-- Минимальная версия Java -->
+        <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>2.16.0</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
-            <!-- Плагин для компиляции Java-кода -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -25,8 +42,6 @@
                     <target>14</target>
                 </configuration>
             </plugin>
-
-            <!-- Плагин для создания исполняемого JAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -37,7 +52,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.example.Main</mainClass> <!-- Замените на полный путь к классу Main -->
+                            <mainClass>com.example.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
